fix(mobile): improved view
Was trying to just use css for switching from editor to preview but this
did not seem to work well. Switched things around to use javascript to
append a show class and try and improve some styling.

--- a/src/components/Editor-Nav/editor-styles.module.css
+++ b/src/components/Editor-Nav/editor-styles.module.css
@@ -1,6 +1,5 @@
 .root {
   display: inline-block;
-  width: 100vw;
   padding: 0em 1em 0.5em;
 }
 
@@ -16,13 +15,9 @@
   display: inlin-block;
 }
 
-.root a {
-  text-decoration: none;
-  color: black;
-}
-
-.root a,
-.root label {
+.root button {
+  all: unset;
+  font-size: 1.3em;
   cursor: pointer;
 }
 
