--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,34 +2,29 @@
   display: flex;
   flex-direction: column;
   flex: 1 1;
+  margin: 0 0.5em;
 }
 
-.container textarea:focus {
-  display: block;
-}
-
-.container :global(#editor) {
-  height: 1px;
-  width: 1px;
-  overflow: hidden;
-  padding: 0;
-}
-
-.container :global(#editor:focus) {
-  flex: 1 1;
-  width: auto;
-  height: auto;
-  overflow: auto;
-}
-
+.container :global(#editor),
 .container :global(#preview) {
   height: 1px;
   width: 1px;
   overflow: hidden;
 }
 
-.container :global(#preview:focus) {
+.container :global(#editor) {
+  border: none;
+  padding: 0;
+}
+
+.container :global(#preview) {
+  border: none;
+}
+
+.container :global(#editor.show), .container :global(#preview.show) {
+  border: 1px solid hsl(0, 0%, 25%);
   flex: 1 1;
+  padding: 1em;
   width: auto;
   height: auto;
   overflow: auto;
@@ -38,19 +33,15 @@
 @media screen and (min-width: 700px) {
   .container {
     flex-direction: row;
+    margin: 0;
   }
 
-  .container :global(#editor) {
+  .container :global(#editor), .container :global(#preview) {
+    border: 1px solid hsl(0, 0%, 25%);
     flex: 1;
+    padding: 1em;
     width: auto;
-    margin: 0 5px;
     height: auto;
-  }
-
-  .container :global(#preview) {
-    flex: 1;
-    width: auto;
-    margin: 0 5px;
-    height: auto;
+    margin: 0 0.5em;
   }
 }
