--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,16 @@
 html {
   --black: rgb(20, 20, 20);
   --white: hsl(0, 0%, 97%);
+  --font-size: calc(16px + 0.3vw);
+}
+
+textarea {
+  font-size: var(--font-size);
 }
 
 body {
   margin: 60px 0;
-  font-size: calc(14px * 0.2vw);
+  font-size: var(--font-size);
   background-color: var(--white);
   max-width: 100%;
 }
