--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,6 +7,8 @@
 
 .container :global(#editor),
 .container :global(#preview) {
+  background-color: var(--white);
+  color: var(--black);
   height: 1px;
   width: 1px;
   overflow: hidden;
