--- a/src/styles.css
+++ b/src/styles.css
@@ -4,15 +4,40 @@ html {
   --font-size: calc(16px + 0.3vw);
 }
 
+header {
+  text-align: center;
+}
+
+h1, h2, h3, h4 {
+  margin: 0;
+  font-family: Roboto, sans-serif;
+  line-height: 1.5em;
+}
+
+footer {
+  position: sticky;
+  background-color: var(--white);
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+}
+
 textarea {
   font-size: var(--font-size);
+  font-family: 'Open Sans', sans-serif;
 }
 
 body {
-  margin: 60px 0;
+  background-color: darkseagreen;
   font-size: var(--font-size);
-  background-color: var(--white);
+  font-family: 'Open Sans', sans-serif;
+  line-height: 1.5em;
   max-width: 100%;
+}
+
+code, #editor {
+  font-family: 'Source Code Pro', monospace;
 }
 
 #root {
@@ -27,4 +52,8 @@ body {
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+.hljs-tag {
+  color: var(--white) !important;
 }
